# autotools-lib-template

./: .gitignore  .travis.yml  Makefile.am  README.md  config.hpp.in  configure.ac
src/: hello.hpp  main.cpp
